# trading

./: .env.example  .gitignore  .gitlab-ci.yml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ROOT_CAUSE_ANALYSIS.md  bugs.txt  conftest.py  debug_logs.txt  engine_config.toml  env  error_explanation.md  fixes.txt  log.txt  log1.txt  logs.txt  new.txt  overview.txt  promp.md  prompt.md  prompt.txt  read.txt  report.md  task.txt  tasks.txt  test_gateio_gold_symbols.py  test_gold_futures_fix.py  test_gold_mapping_simple.py  update.txt  update1.txt  updates.txt  upgrade.txt  upgrades.txt
crypto_trading_bot/: .env.example  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  Makefile  alembic.ini  deploy.sh  docker-compose.yml  init-db.sql  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
crypto_trading_bot/ai/: brain.py  llm_client.py  memory.py  ml_weight_publisher.py  profit_maximizer.py  prompt_engine.py  regime_computer.py  regime_service.py  regime_service_entrypoint.py  sentiment_service.py  shared_regime_writer.py  strategy_trainer.py
crypto_trading_bot/analytics/: advanced_analytics.py  pnl_attribution.py
crypto_trading_bot/backtest/: __init__.py  advanced_backtest.py  backtest_engine.py  backtest_report.py  backtester.py  data_loader.py  monte_carlo.py  optimizer.py  performance_metrics.py  realistic_simulator.py  simulator.py  validation_pipeline.py  walk_forward_optimizer.py
crypto_trading_bot/compliance/: audit_trail.py
crypto_trading_bot/config/: __init__.py  data_sources.py  engine_config.toml  exchanges.py  gold_config.py  logging_config.py  pair_profiles.py  risk_profiles.py  settings.py  strategies.py
crypto_trading_bot/core/: __main__.py  alpha_oracle.py  cold_path_orchestrator.py  engine.py  event_bus.py  event_driven_engine.py  exceptions.py  forex_engine.py  forex_reconciliation.py  forex_state_manager.py  forex_state_persistence.py  forex_strategy_manager.py  graceful_degradation.py  health_check.py  live_readiness_check.py  preflight_check.py  realtime_hub.py  reconciliation.py  rust_supervisor.py  scheduler.py  shared_state_reader.py  state_manager.py  state_persistence.py  trade_tracker.py
crypto_trading_bot/data/: aggregator.py  cache.py  fusion_engine.py  normalizer.py  tick_processor.py
crypto_trading_bot/exchange/: __init__.py  balance_manager.py  base_exchange.py  bingx_client.py  bitget_client.py  bybit_forex_client.py  ccxt_exchange.py  exchange_factory.py  exness_client.py  exness_paper_exchange.py  forex_paper_exchange.py  gateio_book_analyzer.py  gateio_client.py  gateio_tradfi_client.py  gateio_tradfi_mt5_client.py  local_orderbook.py  mexc_client.py  order_manager.py  paper_exchange.py  position_manager.py  websocket_feeds.py  ws_data_manager.py
crypto_trading_bot/execution/: __init__.py  adaptive_execution_engine.py  advanced_execution_algos.py  ai_trade_execution.py  anti_gaming.py  execution_optimizer.py  execution_quality_analyzer.py  fee_calculator.py  forex_trade_executor.py  gateio_fee_optimizer.py  latency_monitor.py  order_flow_execution.py  order_router.py  slippage_estimator.py  smart_entry.py  smart_exit_engine.py  smart_order_router.py  trade_executor.py
crypto_trading_bot/monitoring/: __init__.py  __main__.py  advanced_dashboard_integration.py  alert_summary_task.py  alerting.py  dashboard.py  forex_performance_tracker.py  forex_trade_journal.py  metrics.py  microstructure_dashboard.py  performance_tracker.py  profit_dashboard.py  report_generator.py  trade_journal.py
crypto_trading_bot/risk/: __init__.py  advanced_kelly.py  anti_liquidation.py  circuit_breaker.py  correlation_risk.py  crash_protector.py  daily_pnl_manager.py  drawdown_protector.py  dynamic_hedger.py  dynamic_take_profit.py  economic_filter.py  forex_risk_manager.py  funding_tracker.py  intelligent_trailing.py  leverage_optimizer.py  liquidation_monitor.py  margin_monitor.py  microstructure_sizer.py  partial_profit_manager.py  portfolio_balancer.py  portfolio_optimizer.py  portfolio_risk_manager.py  position_sizer.py  profit_compounder.py  risk_manager.py  stop_loss_engine.py  tail_risk_protector.py  take_profit_engine.py  var_cvar_calculator.py
crypto_trading_bot/scripts/: backfill_data.py  backtest_before_deploy.py  check_deps.py  deploy_vps.sh  download_models.py  generate_keys.py  setup_droplet.sh  setup_env.sh
crypto_trading_bot/strategy/: __init__.py  base_strategy.py  strategy_manager.py  strategy_selector.py
crypto_trading_bot/technical/: __init__.py  indicators.py  market_structure.py  microstructure.py  multi_timeframe.py  orderbook_analysis.py  patterns.py  support_resistance.py  volume_profile.py
crypto_trading_bot/templates/: advanced_features.html  base.html  dashboard.html  forex_dashboard.html  forex_performance.html  forex_risk.html  forex_settings.html  forex_trades.html  logs.html  multi_exchange.html  performance.html  risk.html  settings.html  trades.html
crypto_trading_bot/tests/: conftest.py  mock_exchange.py  test_ai_brain.py  test_alerting.py  test_all_strategies.py  test_anti_liquidation_integration.py  test_bug_fixes.py  test_ccxt_exchange.py  test_circuit_breaker_and_resolver.py  test_confidence_calibration.py  test_data_sources.py  test_engine_fixes.py  test_engine_lifecycle.py  test_exchange_clients.py  test_execution.py  test_fee_optimization.py  test_forex_strategies.py  test_integration.py  test_llm_providers.py  test_microstructure_sizer.py  test_mtf_momentum_filter.py  test_new_data_sources.py  test_new_strategies.py  test_order_sizing_fixes.py  test_parallel_symbol_processing.py  test_reconciliation.py  test_regime_tp_scaling.py  test_risk_manager.py  test_risk_manager_comprehensive.py  test_sentiment.py  test_strategies.py  test_trade_executor_sizing.py  test_trailing_stop_fixes.py  test_updates.py  test_ws_fill_confirmation.py
crypto_trading_bot/utils/: circuit_breaker.py  crypto_utils.py  encryption.py  helpers.py  rate_limiter.py  retry.py  symbol_resolver.py  symbol_utils.py  time_utils.py  validators.py
rust_engine/: Cargo.toml  Dockerfile  pyproject.toml
(+359 files in other folders)
